# displayxr-leia-plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  NOTICE  README.md
.github/workflows/: build-linux.yml  build-windows.yml
docs/: README.md  android-weaving-and-transparency.md  chroma-key-overlay.md  cnsdk-android-calibration.md  cnsdk-c-abi-surface.md  display-mode-switching.md  leia-linux-sdk-contract.md  linux-track-b-runbook.md  transparency.md  weaver.md  window-phase-snapping.md
installer/: CMakeLists.txt  DisplayXRLeiaSRInstaller.nsi
scripts/: build-android.sh  build-linux.sh  build-windows.bat
src/drv_leia/: CMakeLists.txt  leia_bg_capture_win.cpp  leia_bg_capture_win.h  leia_cnsdk.cpp  leia_cnsdk.h  leia_device.c  leia_display_processor.cpp  leia_display_processor.h  leia_display_processor_d3d11.cpp  leia_display_processor_d3d11.h  leia_display_processor_d3d12.cpp  leia_display_processor_d3d12.h  leia_display_processor_gl.cpp  leia_display_processor_gl.h  leia_edid_probe.c  leia_edid_table.h  leia_interface.h  leia_plugin.c  leia_sr.cpp  leia_sr_d3d11.cpp  leia_sr_d3d11.h  leia_sr_d3d12.cpp  leia_sr_d3d12.h  leia_sr_gl.cpp  leia_sr_gl.h  leia_sr_probe.cpp  leia_types.h  version.rc.in
src/drv_leia/shaders/: alpha_gate.frag  compose_under_bg.frag  zone_reduce.comp
src/drv_leia_android/: CMakeLists.txt  README.md  leia_cnsdk.cpp  leia_cnsdk.h  leia_display_processor_cnsdk.cpp  leia_display_processor_cnsdk.h  leia_plugin_android.c
src/drv_leia_android/shaders/: alpha_gate.frag  fullscreen_tri.vert
src/drv_leia_linux/: CMakeLists.txt  leia_bg_capture_linux.c  leia_bg_capture_linux.h  leia_display_processor_linux.c  leia_display_processor_linux.h  leia_edid_probe_linux.c  leia_edid_probe_linux.h  leia_plugin_linux.c  leia_sr_linux.h  leia_sr_linux_sdk.c  leia_sr_stub.c  plugin_exports.version
src/drv_leia_linux/shaders/: compose_under_bg.frag
